Fixed styling bugs on Safari.

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -19,20 +19,19 @@ a.navbar-brand span {
 }
 
 .splash {
+	position: relative;
 	overflow: hidden;
 }
 
 .splash .left {
 	padding: 0 0 0 15px;
-    padding-bottom: 100%;
-    margin-bottom: -100%;
 }
 
 .splash .left .content {
+	position: absolute;
 	padding: 20px;
 	background-color: #f6f6f6;
-    padding-bottom: 100%;
-    margin-bottom: -100%;
+	height: 500px;
 }
 
 footer {
